fixing partners grid spacing

--- a/styles.css
+++ b/styles.css
@@ -840,6 +840,15 @@ p {
     .hero-section .column-right {
         width: 40%;
     }
+
+    /* PARTNERS Section */
+    .partners-section {
+        margin: -60px 0 0 0;
+    }
+    
+    .partners-section .partners-grid {
+        margin: 0 0 var(--spacing-xl) 0;
+    }
 }
 
 @media only screen and (max-width: 850px) {
@@ -936,6 +945,11 @@ p {
     .hero-phone {
         height: 450px;
         transform: translateX(32px);
+    }
+
+    /* PARTNERS Section */
+    .partners-section {
+        margin: -20px 0 0 0;
     }
 
     /* UNIFIED PLATFORM Section */
@@ -1037,6 +1051,10 @@ p {
     } 
 
     /* PARTNERS Section */
+    .partners-section {
+        margin: var(--spacing-xl) 0 var(--spacing-sm) 0;
+    }
+
     .partners-grid {
         grid-template-columns: 1fr 1fr;
     }
@@ -1116,6 +1134,10 @@ p {
     /* GETTING STARTED Section */
     .getting-started-section {
         padding: var(--spacing-lg) 0;
+    }
+
+    .getting-started-section .card .card-icon {
+        height: 35px;
     }
 
     /* FOOTER Section */
